--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,5 +63,18 @@
     </style>
 
 
+    <style name="toobar">
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/toolbar</item>
+        <item name="android:padding">2dp</item>
+<!--        <item name="android:layout_marginLeft">40dp</item>-->
+<!--        <item name="android:layout_marginRight">40dp</item>-->
+<!--        <item name="android:layout_marginTop">15dp</item>-->
+
+
+    </style>
+
 
 </resources>
