--- a/app/src/main/res/layout/activity_menu_lateral.xml
+++ b/app/src/main/res/layout/activity_menu_lateral.xml
@@ -16,8 +16,10 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
+        style="@style/toobar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_menu_lateral"
