--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,18 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="dev.samuel.teste.agenda.ui.home.HomeFragment"
+        android:name="dev.samuel.teste.agenda.ui.Fragment.mesFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/activity_mes" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="dev.samuel.teste.agenda.ui.gallery.GalleryFragment"
+        android:name="dev.samuel.teste.agenda.ui.Fragment.eventeFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/activity_event" />
 
     <fragment
         android:id="@+id/nav_slideshow"
+
         android:name="dev.samuel.teste.agenda.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
