Ligando com banco de dados

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,8 +68,17 @@
                     android:layout_marginTop="80dp"
                     android:text="@string/acessar" />
 
+                <ProgressBar
+                    android:id="@+id/progresseBar"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible"
+                    />
+
                 <TextView
-                    android:id="@+id/textView_CriarConta"
+                    android:id="@+id/text_tela_cadrastro"
                     android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
