--- a/app/src/main/res/layout/activity_form_nova_conta.xml
+++ b/app/src/main/res/layout/activity_form_nova_conta.xml
@@ -55,7 +55,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/edit_novo_nome"
+                    android:id="@+id/edit_nome"
                     style="@style/Edit_Text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
                     android:inputType="none" />
 
                 <EditText
-                    android:id="@+id/edit_novo_email"
+                    android:id="@+id/edit_email"
                     style="@style/Edit_Text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
                     android:inputType="textEmailAddress" />
 
                 <EditText
-                    android:id="@+id/edit_nova_senha"
+                    android:id="@+id/edit_senha"
                     style="@style/Edit_Text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                     android:text="@string/proximo" />
 
                 <TextView
-                    android:id="@+id/textView_jaTenhoConta"
+                    android:id="@+id/text_tela_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
