--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,8 +19,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-
         android:name="dev.samuel.teste.agenda.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/activity_user" />
 </navigation>
