--- a/app/src/main/res/layout/activity_mes.xml
+++ b/app/src/main/res/layout/activity_mes.xml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.principal.Mes_Activity">
+    android:background="@color/white"
+    tools:context=".view.Mes_Activity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarMes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/azul"
+            android:elevation="3dp"
+            app:title="toolBar"
+            app:titleTextColor="@color/white">
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </FrameLayout>
+
+    </LinearLayout>
 
     <ScrollView
 
@@ -19,42 +47,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_margin="20dp"
-
-                >
-
-                <ImageView
-                    android:id="@+id/menu"
-                    android:layout_width="30dp"
-                    android:layout_height="20dp"
-                    app:srcCompat="@drawable/menu" />
-
-                <TextView
-                    android:id="@+id/textView_mes"
-                    android:layout_width="227dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:text="Mês View"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-
-                    />
-
-                <ImageView
-                    android:id="@+id/voltar"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="20dp"
-                    app:srcCompat="@drawable/voltar" />
-
-
-            </LinearLayout>
-
             <CalendarView
                 android:id="@+id/calendarView"
                 android:layout_marginTop="10dp"
@@ -62,7 +54,7 @@
                 android:layout_height="350dp"
                 android:layout_gravity="center"
                 style="@style/Widget.CalendarView.Custom"
-           />
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -79,41 +71,6 @@
                     android:layout_margin="20dp">
 
                 </ListView>
-
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:padding="10dp"-->
-<!--                    android:layout_marginStart="15dp"-->
-<!--                    android:layout_marginEnd="15dp"-->
-<!--                    android:layout_marginBottom="10dp"-->
-<!--                    android:background="@drawable/caixa">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/titleoutput"-->
-<!--                        android:textSize="20dp"-->
-<!--                        android:textColor="@color/black"-->
-<!--                        tools:text="My title"/>-->
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/descriptionoutput"-->
-<!--                        android:layout_below="@id/titleoutput"-->
-<!--                        android:textColor="#393939"-->
-<!--                        tools:text="My long long long descrption"/>-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/timeoutput"-->
-<!--                        android:layout_below="@id/descriptionoutput"-->
-<!--                        android:textSize="12dp"-->
-<!--                        android:gravity="end"-->
-<!--                        android:textColor="#858484"-->
-<!--                        tools:text="Jan 21 2020 "/>-->
-<!--                </RelativeLayout>-->
 
 
             </LinearLayout>
