--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Agenda" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/azul</item>
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.Agenda" parent="Base.Theme.Agenda" />
-
-    <style name="Theme.Agenda.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.Agenda.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.Agenda.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
